--- a/CsvToDb-bruiz/pom.xml
+++ b/CsvToDb-bruiz/pom.xml
@@ -24,6 +24,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>21.1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
