--- a/CsvToDb-bruiz/.project
+++ b/CsvToDb-bruiz/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CsvToDb-bruiz</name>
+	<name>CsvToDb1-bruiz</name>
 	<comment></comment>
 	<projects>
 	</projects>
