--- a/CsvToDb-bruiz/pom.xml
+++ b/CsvToDb-bruiz/pom.xml
@@ -4,10 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>net.benja.practicas</groupId>
-	<artifactId>CsvToDb-bruiz1</artifactId>
+	<artifactId>CsvToDb-bruiz</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>CsvToDb-bruiz1</name>
+	<name>CsvToDb-bruiz</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
